<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00695C"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/etTituloLogin"
        android:textColor="#ffffff"
        android:textSize="60dp"
        android:textStyle="bold"
        android:typeface="monospace" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botones_general"
            android:hint="@string/etEmail"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:text=""
            android:textSize="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#000000"
            android:visibility="invisible" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botones_general"
            android:hint="@string/etPassword"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"

            android:text=""
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:padding="30dp"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/botones_general"
            android:text="@string/btnLogin" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:background="@drawable/botones_general"
            android:text="@string/btnRegistro" />

    </LinearLayout>






</FrameLayout>